# legendary-pancake

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  conanfile.txt
.github/workflows/: ci.yml
cmake/modules/: GetGitRevisionDescription.cmake  GetGitVersion.cmake
dragoon_flight/: Cargo.toml
dragoon_flight/src/: main.rs
dragoon_flight/src/game/: anime.rs  mod.rs
dragoon_flight/src/game/entity/: anime.rs  entity_properties.rs  mod.rs  spawner.rs
dragoon_flight/src/game/scene_manager/: app_extensions.rs  mod.rs  plugin.rs  scene_states.rs  scene_traits.rs  score.rs
dragoon_flight/src/game/scene_manager/scenes/: game_over_scene.rs  ingame_scene.rs  main_scene.rs  mod.rs
dragoon_flight/src/game/scenes/: main_scene.rs
engine/: CMakeLists.txt
engine/core/include/: version.hpp
engine/core/src/: version.cpp.in
engine/core/tests/: test_version.cpp.in
legacy/: CMakeLists.txt  LICENSE  build.sh  clear.sh
legacy/engine/: CMakeLists.txt
legacy/engine/core/include/: core.hpp  version.hpp
legacy/engine/interfaces/service/include/: i_window_service.hpp
legacy/engine/window/include/: window.hpp
